waybar/.config/waybar/style.css
@import url("../wal/colors.css");

* {
    font-family: "FiraCode Nerd Font", "FreeSerif", serif;
    font-size: 20px;
    color: @foreground;
    border: none;
}

window#waybar {
    background: alpha(@background, 0.5);
    border-bottom: 1px solid alpha(@color4, 0.6);
    padding: 5px 0;
}

#modules-left,
#modules-right {
    margin: 0 11px;
    padding: 3px 10px;
}

#workspaces button {
    background: transparent;
    color: alpha(@foreground, 0.8);
    padding: 0 10px;
}

#workspaces button.active {
    color: @foreground;
    background: alpha(@color3, 0.18);
    border-radius: 6px;
    padding: 0 10px;
}

#workspaces button:hover {
    color: @foreground;
    background: alpha(@color3, 0.25);
    border-radius: 6px;
}

#hyprland-window,
#custom-bitcoin,
#tray,
#network,
#custom-birthday-clock {
    background: transparent;
    padding: 0 10px;
    margin: 0 6px;
    border-radius: 6px;
}

#custom-mullvad {
    background: transparent;
    padding: 0 10px;
    border-radius: 6px;
}

#battery {
    background: transparent;
    padding: 0 10px;
    margin: 0 10px;
    border-radius: 6px;
}

#cpu {
    background: transparent;
    border-radius: 6px;
}

#mpd {
    background: transparent;
    border-radius: 6px;
    padding: 0 24px;
}

#wireplumber {
    padding: 0 10px;
    margin: 0 12px;
    background: transparent;
    border-radius: 6px;
}

#custom-weather {
    border-radius: 6px;
}

#custom-weather:hover,
#custom-bitcoin:hover,
#battery:hover,
#tray:hover,
#network:hover,
#cpu:hover,
#mpd:hover,
#wireplumber:hover,
#custom-birthday-clock:hover,
#hyprland-window:hover,
#hyprland-mode:hover {
    background: alpha(@color3, 0.22);
}

#battery.critical {
    color: @color1;
}

